feat: jsonp almost

--- a/packages/jsonp/index.html
+++ b/packages/jsonp/index.html
@@ -10,7 +10,7 @@
 
 <body>
 </body>
-<script src="./index.ts"></script>
-<script src="localhost:3000/jsonp">   
+<script src="./src/index.ts"></script>
+</script>
 </script>
 </html>
