--- a/packages/jsonp/index.html
+++ b/packages/jsonp/index.html
@@ -10,7 +10,8 @@
 
 <body>
 </body>
-<script src="./src/index.ts"></script>
+<script src="./src/index.js"></script>
 </script>
 </script>
+
 </html>
