--- a/packages/style/example/index.html
+++ b/packages/style/example/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="loading"></div>
 </body>
+<script src="../src/loading.tsx"></script>
 </html>
