--- a/packages/support/example/index.html
+++ b/packages/support/example/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<script src="../src/nextPage.ts"></script>
+<script src="../src/srp-helper.ts"></script>
 <body>
     test for some support tool
 </body>
