--- a/packages/vue/public/index.html
+++ b/packages/vue/public/index.html
@@ -6,7 +6,8 @@
         <title>Document</title>
     </head>
     <body>
-        <div id="app">
+        <div id="app" style="color: red;">
+            hello
             <h2>{{message}}</h2>
         </div>
     </body>
