--- a/packages/vue/public/index.html
+++ b/packages/vue/public/index.html
@@ -6,9 +6,8 @@
         <title>Document</title>
     </head>
     <body>
-        <div id="app" style="color: red;">
-            hello
-            <h2>{{message}}</h2>
+        <div id="app" style="color: red; background: blue;">
+            <h2>dddd{{message}}dddd {{test}}</h2>
         </div>
     </body>
     <script src="/dist/umd/vue.js"></script>
